replace checkInvariants with assertForestEquals. add many tests
Signed-off-by: Valentin Carrez <valentin.carrez@rte-france.com>